[package]
name = "embassy"
version = "0.1.0"
authors = ["esp"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"

[dependencies]
critical-section  = "1.1.1"
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
esp32-hal = {package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git", features = ["async", "embassy", "embassy-time-timg0"] }
embassy-time  = { version = "0.1.0", features = ["nightly"]}
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f9", features = ["nightly", "integrated-timers"] }
esp-println       = { version = "0.3.1", features = ["esp32"] }
esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }
embedded-graphics = "0.7.1"
sha2              = { version = "0.10.6", default-features = false}
smart-leds        = "0.3.0"
ssd1306           = "0.7.1"
static_cell       = "1.0.0"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
